--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <!--#include virtual="header.html" -->
+    <header></header>
+    <script src="header.js"></script>
     <main>
         <section class="contact-container">
             <div class="form-section">
