--- a/project3.html
+++ b/project3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header></header>
-    <script src="header.js"></script>
+    <script src="js/header.js"></script>
     <main>
         <section class="project-detail">
             <h1>[Project Name]</h1>
