--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li class="tooltip">
-                    <a href="[GitHub URL]" target="_blank" class="icon-button"><img src="images/github-logo.png" alt="GitHub" class="icon"></a>
+                    <a href="https://github.com/Jared-Mori" target="_blank" class="icon-button"><img src="images/github-logo.png" alt="GitHub" class="icon"></a>
                     <span class="tooltiptext">GitHub</span>
                 </li>
                 <li class="tooltip">
