--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project - [Project Name]</title>
+    <title>Project - Kongo Web Store</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -11,14 +11,13 @@
     <script src="js/header.js"></script>
     <main>
         <section class="project-detail">
-            <h1>[Project Name]</h1>
-            <img src="images/project-image.jpg" alt="[Project Name]" class="project-image">
-            <p><strong>Description:</strong> [Detailed description of the project]</p>
-            <p><strong>Technologies Used:</strong> [List of technologies]</p>
-            <p><strong>Challenges:</strong> [Challenges faced during development]</p>
-            <p><strong>Outcome:</strong> [Final results and impact of the project]</p>
-            <a href="[Live Demo Link]" target="_blank">View Live Demo</a>
-            <a href="[GitHub Link]" target="_blank">View Source Code</a>
+            <h1>Kongo Web Store</h1>
+            <img src="images/kongologo.png" alt="Kongo-Web-Store" class="project-image">
+            <p><strong>Description:</strong> The Kongo Web Store is a Django-based web application designed to provide users with an easy-to-use platform for buying and selling goods online. It offers features for both customers and retailers, allowing users to search for products, purchase items, and create their own listings.</p>
+            <p><strong>Technologies Used: The Django framework forms the basis of this project, which integrates the webpage with an SQL database. The project uses a mix of Python and HTML.</strong> </p>
+            <p><strong>Challenges:</strong> One of the challenges involved in creating this project was becoming familiar with the Django framework. Beyond this, creating a dynamic webstore front that made live queries to the SQL database was probably the largest challenge we faced while working on this project.</p>
+            <p><strong>Outcome:</strong> The final iteration of this project takes the form of a semi functional webstore. Due to the scope of the project, the webpage is not integrated with actual payment services, and is not currently hosted on a webserver. However, integrating with these services would make it a fully fledged webstore.</p>
+            <a href="https://github.com/Zapplu/Kongo-Web-Store.git" target="_blank">View Source Code</a>
         </section>
     </main>
     <footer>
