--- a/project2.html
+++ b/project2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project - [Project Name]</title>
+    <title>Project - Alien Escape Game</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -11,14 +11,13 @@
     <script src="js/header.js"></script>
     <main>
         <section class="project-detail">
-            <h1>[Project Name]</h1>
-            <img src="images/project-image.jpg" alt="[Project Name]" class="project-image">
-            <p><strong>Description:</strong> [Detailed description of the project]</p>
-            <p><strong>Technologies Used:</strong> [List of technologies]</p>
-            <p><strong>Challenges:</strong> [Challenges faced during development]</p>
-            <p><strong>Outcome:</strong> [Final results and impact of the project]</p>
-            <a href="[Live Demo Link]" target="_blank">View Live Demo</a>
-            <a href="[GitHub Link]" target="_blank">View Source Code</a>
+            <h1>Alien Escape Game</h1>
+            <img src="images/project-image.jpg" alt="Alien Escape Game" class="project-image">
+            <p><strong>Description:</strong> This project is the final project from the class Intro to Game Design. It utilizes the Unity engine, and is a game centered around escaping increasingly larger mazes, while fighting off alien attackers.</p>
+            <p><strong>Technologies Used:</strong> The project utilizes the Unity engine. Within Unity, it utilizes an external NavMesh package to improve enemy AI. It also utilizes C# in scripts.</p>
+            <p><strong>Challenges:</strong> The two hardest challenges faced in this project were enemy AI and map generation. Enemy AI utilizes an external package to allow for 2D rendering of Unity's NavMesh. Map generation utilizes a backtracking algorithm to generate a complete maze, which is randomized every level up.</p>
+            <p><strong>Outcome:</strong> The final result is an unpolised game meant so showcase skills in Unity and C#. The game utilizes a number of interesting and complex algorithms to achieve its effects, and demonstrates the ability to utilize much of Unity's toolkit.</p>
+            <a href="https://github.com/Jared-Mori/Alien-Escape-Game" target="_blank">View Source Code</a>
         </section>
     </main>
     <footer>
