--- a/project3.html
+++ b/project3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project - [Project Name]</title>
+    <title>Project - Torch the Deck</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -11,14 +11,13 @@
     <script src="js/header.js"></script>
     <main>
         <section class="project-detail">
-            <h1>[Project Name]</h1>
-            <img src="images/project-image.jpg" alt="[Project Name]" class="project-image">
-            <p><strong>Description:</strong> [Detailed description of the project]</p>
-            <p><strong>Technologies Used:</strong> [List of technologies]</p>
+            <h1>Torch the Deck</h1>
+            <img src="images/TorchTheDeck.JPG" alt="Torch the Deck" class="project-image">
+            <p><strong>Description:</strong> This project is currently in progress as my senior capstone project. It is a game built in the Unity engine, designed in the roguelike deck-builder genre. The games core mechanics is that each card the player obtains can be used only once, creating interesting, meaningful gameplay that requires players to make difficulty choices about resource management.</p>
+            <p><strong>Technologies Used:</strong> The project plans to use Unity engine, as well as external packages.</p>
             <p><strong>Challenges:</strong> [Challenges faced during development]</p>
             <p><strong>Outcome:</strong> [Final results and impact of the project]</p>
-            <a href="[Live Demo Link]" target="_blank">View Live Demo</a>
-            <a href="[GitHub Link]" target="_blank">View Source Code</a>
+            <a href="https://github.com/Jared-Mori/Torch-the-Deck" target="_blank">View Source Code</a>
         </section>
     </main>
     <footer>
